# beat-forge-_-api

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  production.yml  release.yml  staging.yml
entity/: Cargo.toml
entity/src/: beat_saber_versions.rs  categories.rs  lib.rs  mod_beat_saber_versions.rs  mod_stats.rs  mod_versions.rs  mods.rs  prelude.rs  user_mods.rs  users.rs  users_mods.rs  version_beat_saber_versions.rs  version_conflicts.rs  version_dependents.rs  version_stats.rs  versions.rs  versions_conflicts.rs  versions_dependents.rs
meilisearch-entity/: Cargo.toml
meilisearch-entity/src/: lib.rs  mod_stats.rs  mods.rs  prelude.rs  user.rs  version.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230727_015400_load_default_data.rs  m20230727_063415_create_mod_beat_saber_versions.rs  m20230806_034429_melilisearch.rs  m20230813_235044_reclean_download_urls.rs  main.rs
src/: auth.rs  cdn.rs  main.rs  mods.rs  schema.rs  search.rs  users.rs  versions.rs
