[workspace]
members = [
    ".",
    "*entity",
    "migration"
]

[package]
name = "api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/beat-forge/api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
juniper = "0.15.11"
log = "0.4.20"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-actix-rustls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
entity = { path = "./entity" }
dotenv = "0.15.0"
juniper_actix = "0.4.0"
futures = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
bitflags = "2.3.3"
cached = "0.44.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
minreq = { version = "2.8.1", features = ["serde_json", "json-using-serde", "https-rustls"] }
serde_json = "1.0.104"
lazy_static = "1.4.0"
forge-lib = { git = "https://github.com/beat-forge/lib", version = "1.0.0" }
migration = { path = "./migration" }
semver = "1.0.18"
once_cell = "1.18.0"
meilisearch-sdk = "0.24.1"
meilisearch-entity = { path = "./meilisearch-entity" }
